another height on mobile devices fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
